# echor-smtp

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/handlers/: email.rs  mod.rs
src/middleware/: allowed_origin.rs  mod.rs
src/models/: app.rs  email.rs  mod.rs
