[package]
name = "echor-smtp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lettre = "0.10"
lettre_email = "0.9"
dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }
serde-email = "3.2.0"
